fixed path of myid file

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,7 +51,7 @@
 - name: Configure myid file
   copy:
     content: '{{ ansible_loop.index }}'
-    dest: "{{ zookeeper_config_dir }}/myid"
+    dest: "{{ zookeeper_data_dir }}/myid"
   when: item.host == ansible_hostname or item.host in ansible_all_ipv4_addresses or item.host == 'localhost'
   loop: "{{ zookeeper_servers }}"
   loop_control:
