reload daemon since we may just have put the unit file there

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -68,7 +68,8 @@
   notify: restart zookeeper
 
 - name: enable zookeeper service
-  service:
+  systemd:
     name: "zookeeper"
     state: "{{ zookeeper_enabled | ternary('started', 'stopped') }}"
     enabled: "{{ zookeeper_enabled }}"
+    daemon_reload: yes
