--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ zookeeper_logger_config_options:
 zookeeper_config_dir: "/opt/zookeeper/"
 zookeeper_log_config_dir: "/opt/zookeeper/conf/"
 zookeeper_data_dir: "/var/zookeeper/"
+zookeeper_bin_dir: "/opt/zookeeper/"
+zookeeper_log_dir: "/var/log/zookeeper"
 
 zookeeper_client_port: 2181
 zookeeper_default_service_port_a: 2888
