fixing myid file permission on first run

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -52,6 +52,9 @@
   copy:
     content: '{{ ansible_loop.index }}'
     dest: "{{ zookeeper_data_dir }}/myid"
+    owner: "{{ zookeeper_system_user }}"
+    group: "{{ zookeeper_system_user }}"
+    mode: '0644'
   when: item == ansible_hostname or item in ansible_all_ipv4_addresses or item == 'localhost' or item.host == ansible_hostname or item.host in ansible_all_ipv4_addresses or item.host == 'localhost'
   loop: "{{ zookeeper_servers }}"
   loop_control:
