--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,17 +48,25 @@
   with_items: "{{ zookeeper_logger_config_options }}"
   notify: restart zookeeper
 
+- name: own service id
+  set_fact:
+    own_zookeeper_id: "{{ ansible_loop.index }}"
+  when: item == ansible_hostname or item in ansible_all_ipv4_addresses or item == 'localhost' or 'host' in item and (item.host == ansible_hostname or item.host in ansible_all_ipv4_addresses or item.host == 'localhost')
+  loop: "{{ zookeeper_servers }}"
+  loop_control:
+    extended: yes
+
+- name: assert one of given servers matched own host or ip 
+  assert:
+    that: "{{ own_zookeeper_id is defined }}"
+
 - name: Configure myid file
   copy:
-    content: '{{ ansible_loop.index }}'
+    content: '{{ own_zookeeper_id }}'
     dest: "{{ zookeeper_data_dir }}/myid"
     owner: "{{ zookeeper_system_user }}"
     group: "{{ zookeeper_system_user }}"
     mode: '0644'
-  when: item == ansible_hostname or item in ansible_all_ipv4_addresses or item == 'localhost' or item.host == ansible_hostname or item.host in ansible_all_ipv4_addresses or item.host == 'localhost'
-  loop: "{{ zookeeper_servers }}"
-  loop_control:
-    extended: yes
   notify:
     - reset zookeeper data
     - restart zookeeper
